Refactor : 코드 간소화